session-01/exercise-03/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise-03
  labels: 
    exercise: "03"
    rol: web-wp
spec:
  replicas: 2
  template:
    metadata:
      labels: 
        exercise: "03"
        rol: web-wp
    spec:
      containers:
      - image: bitnami/wordpress:4.9.4
        name: wordpress
        ports:
        - name: wp-http
          containerPort: 80
        - name: wp-https
          containerPort: 443
