session-01/exercise-03/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  # name: XXXX
  # namespace: XXXX
spec:
  # rules: XXXX
  # ...
